--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-  <script>
-  window.location.replace('px-context-browser/index.html');</script>
-</head>
-<body>
-
-</body>
-</html>
+<META http-equiv=refresh content="0;URL=px-context-browser/">
